Code to create web page

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,14 @@
 <html>
 	<body>
 		<h1> Hello Santosh </h1>
+		<form action="/predict_sentiment_single_tweet_using_Logistics">
+			<input type="text" name="tweet">
+			
+			<button type="submit">Predict</button>
+		</form>
+		
+		<br/>
+		</br>
+		{{prediction_text}}
 	</body>
 </html>
