--- a/templates/index.html
+++ b/templates/index.html
@@ -8,16 +8,24 @@
 		<link href="https://fonts.googlepis.com/css?family=Hindi:300" rel="stylesheet" type="text/css">
 		<link href="https://fonts.googlepis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet" type="text/css">
 	</head>
-	
+	<style>
+	.content {
+	max-width: 500px;
+	margin: auto;
+	}
+</style>
 	<body>
-		<div class="login">
+		<div class="content">
 			<h1> Tweet Sentiment Analysis </h1>
 			
 			<form action={{url_for("sentimentsAnalysisSingleTweetUsingLogisticRegression")}} method="post">
-			<input type="text" name="tweet" placeholder="tweet" required="required" />
+			Enter a Tweet: <input type="text" name="tweet" placeholder="Tweet" required="required" />
 			
 			<button type="submit">Predict</button>
 		</form>
+		<br>
+		<br>
+		<b>{{prediction_text}}<b/>
 		</div>
 	<body>
 </html>
