--- a/templates/logisticRegressionTweetTopic.html
+++ b/templates/logisticRegressionTweetTopic.html
@@ -18,12 +18,16 @@
 		<div class="content">
 			<h1> Tweet Sentiment Analysis </h1>
 			
-			<form action={{url_for("showSentimentsAnalysisSingleTweetUsingLogisticRegression")}} method="post">
-				<button type="submit">Pridict Sentiment For Single Tweet</button>
+			<form action={{url_for("sentimentsAnalysisBasedOnTweetTopicUsingLogisticRegression")}} method="post">
+			
+				Enter a Tweet Topic: <input type="text" name="tweetTopic" placeholder="Tweet Topic" required="required" />
+				<button type="submit">Predict Topic</button>
+				
 			</form>
+			
 			<br/>
-			<form action={{url_for("showSentimentsAnalysisBasedOnTweetTopicUsingLogisticRegression")}} method="post">
-				<button type="submit">Pridict Sentiment For Tweet Topic</button>
+			<form action={{url_for("showHomePage")}} method="post">
+				<button type="submit"> Back </button>
 			</form>
 		</div>
 	<body>
